# py-template

./: .gitignore  AGENTS.md  LICENSE.rst  README.md  README.rst  action.yml  cookiecutter.json  noxfile.py  pyproject.toml
.github/: fix_sarif_severity.jq
.github/workflows/: tests.yaml  tests.yml
hooks/: post_gen_project.py
tests/: __init__.py  test_template.py
{{cookiecutter.project_name}}/: AGENTS.md  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  mkdocs.yml  noxfile.py  pyproject.toml  {% if cookiecutter.license == 'Copyright' -%} LICENSE {%- endif %}
{{cookiecutter.project_name}}/.github/workflows/: pr-description-validator.yml  release.yml  secret-scanning.yaml  semgrep-scanning.yaml  tests.yml  update-template.yaml
