[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-template"
version = "1.0.0"
description = "Python project template using cookiecutter/cruft"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "PrismaPhotonics"}]

[project.optional-dependencies]
tests = [
  "pytest>=8.0.0",
  "pytest-cov>=3.0.0",
  "cruft>=2.15.0",
  "pyyaml>=6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"

[tool.ruff]
extend-exclude = ["[{][{]cookiecutter.project_name[}][}]/noxfile.py"]

[tool.codespell]
ignore-words-list = " "
