[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-template"
version = "1.0.0"
description = "Python project template using cookiecutter/cruft"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "PrismaPhotonics"}]

[project.optional-dependencies]
tests = [
  "pytest>=8.0.0",
  "pytest-cov>=3.0.0",
  "cruft>=2.15.0",
  "pyyaml>=6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"

[tool.coverage.run]
branch = true
source = ["hooks", "tests"]

[tool.coverage.paths]
source = ["."]

[tool.coverage.report]
show_missing = true

[tool.ruff]
extend-exclude = ["[{][{]cookiecutter.project_name[}][}]"]
output-format = "full"
show-fixes = true

[tool.ruff.lint]
ignore = [
  "S101",  # assert
  "PLR2004",  # magic-value-comparison
  "PLW2901",  # redefined-loop-name
  "ISC001",  # single-line-implicit-string-concatenation
  "SIM105",  # suppressible-exception
  "SIM108",  # if-else-block-instead-of-if-exp
  # "D203",  # one blank line before class
  "D213"  # multi-line-summary-second-line
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["D", "PTH"]
"tests/**" = ["S", "ARG001", "ARG002", "ANN"]
"hooks/**" = ["INP001", "D100"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
known-first-party = ["hooks", "tests"]

[tool.codespell]
ignore-words-list = " "
